Bug Fixes
burbuja general para los proyectos
prospected for list better showing
project filter breaks on empty

--- a/dashboard-front/src/components/atoms/prospect_row/Prospect_Row.css
+++ b/dashboard-front/src/components/atoms/prospect_row/Prospect_Row.css
@@ -41,24 +41,17 @@
   color: gray;
 }
 
-.prospects__row__member__prospected_for {
-	align-content: center;
-	text-align: center;
-	padding: 0 24px;
-  	height: 30px;
-  	border-radius: 24px;
+.prospected_for__nametag__container {
+  flex-direction: row;
 }
 
-.Amazon {
-  background-color: #dfcd2c;
-  color: black;
-}
-.Youtube {
+.prospected_for__nametag{
+  display: flex;
+  padding: .5rem;
+  align-items: center;
+  justify-content: center;
   background-color: #ff2c2c;
-  color: black;
-}
-.Kaiser {
-  background-color: #7667db;
+  border-radius: 24px;
   color: black;
 }
 
@@ -67,7 +60,6 @@
   padding-bottom: 2.5em;
   scale: 1.01;
   filter: contrast(0.75);
-  
 }
 
 .capability__nametag__container{
